2004-10-29  Marcus Brinkmann  <marcus@gnu.org>

	* ia32-cmain.c (switch_thread): Correct start of small sub stack
	address.  Reported by Rian Hunter <hurd@thelaststop.net>.

2004-10-28  Marcus Brinkmann  <marcus@gnu.org>

	* physmem.c (get_task_cap): Removed.
	(bootstrap_final): New function.
	(main): Call bootstrap_final, not get_task_cap.

2004-10-27  Marcus Brinkmann  <marcus@gnu.org>

	* container.c (container_map): Call l4_fpage_xspan instead of
	l4_fpage_span.

2004-10-25  Marcus Brinkmann  <marcus@gnu.org>

	* physmem.c (physmem_server): Call hurd_cap_bucket_worker_alloc.

2004-10-20  Marcus Brinkmann  <marcus@gnu.org>

	* malloc-wrap.c: Do not include zalloc.h here.
	(USE_MALLOC_LOCK): Define.

2004-07-16  Bas Wijnen  <b.wijnen@phys.rug.nl>

	* physmem.c (physmem_server): Added missing parameter.

2004-04-26  Marcus Brinkmann  <marcus@gnu.org>

	* physmem.c: Include <hurd/wortel.h>.
	(wortel_thread_id, wortel_cap_id): New variables.
	(get_all_memory): Rewritten using wortel interface.
	(create_bootstrap_caps): Likewise.
	(get_threads): Likewise.
	(get_task_cap): Likewise.
	(main): Initialize wortel_thread_id.
	* output.c (shutdown): Include <hurd/wortel.h>.
	(shutdown): Rewritten using wortel interface.
	(putchar): Rewritten using wortel interface.

2004-04-15  Marcus Brinkmann  <marcus@gnu.org>

	* container.c (container_map): New function.
	(container_demux): Call container_map.

2004-04-11  Marcus Brinkmann  <marcus@gnu.org>

	* physmem.c (get_task_cap): New function.
	(main): Call get_task_cap.

	* container.c (container_reinit): Unmap the fpages before
	returning them to the pool.

2004-04-10  Marcus Brinkmann  <marcus@gnu.org>

	* container.c: Include <l4/space.h>.  Use L4_FPAGE_SPAN_MAX
	instead MAX_FPAGES everywhere.
	(container_reinit): New function.
	(container_class_init): Pass container_reinit as reinit function.
	(MAX_FPAGES): Removed.

2004-04-09  Marcus Brinkmann  <marcus@gnu.org>

	* container.c: Revert last change.